--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -1,1 +1,13 @@
+<div class="navbar-fixed">
+    <nav style=' height: 44px; line-height: 44px;' class="blue-grey darken-3 adjust-sidenav">
+        <div class="nav-wrapper">
+            <a href="/dashboard" class="brand-logo">Logo</a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="/">Tess</a></li>
+                <li><a href="/">Test</a></li>
+            </ul>
+        </div>
+    </nav>
+</div>
+
 Dashboard
