--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
         <script src="app/app.config.js"></script>
         <script src="app/home/home.js"></script>
         <script src="app/setting/home.js"></script>
+        <script src="app/report/home.js"></script>
         <script src="assets/js/script.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?v=3&libraries=geometry"></script>
     </body>
