UI for devicce, interval, timezone and speed

--- a/public/app/setting/home.html
+++ b/public/app/setting/home.html
@@ -12,6 +12,7 @@
         <li><a ui-sref=".geo_fence">Geo Fence</a></li>
         <li><a ui-sref=".bay_information">Bay Information</a></li>
     </ul>
+    <ul><li class="dropdown-button btn truckdropdown" data-activates="truck">Select Truck</li></ul>
     <div ui-view></div>
 </div>
 
@@ -28,3 +29,8 @@
     <li><a ui-sref=".sms_service_number">Set SMS Service Number</a></li>
 </ul>
 
+<ul id="truck" class="dropdown-content">
+    <li>PHM1234</li>
+    <li>PHM5678</li>
+    <li>PHM2345</li>
+</ul>
