--- a/public/app/setting/message_to_device.html
+++ b/public/app/setting/message_to_device.html
@@ -1,1 +1,17 @@
-message to device
+<div class="row">
+    <div class="container center">
+        <div class="headerrow">
+            <b>Message to Device</b>
+        </div>
+        <div class="col s12 m12 l12">
+            <textarea class="resize"></textarea>
+        </div>
+        <div class="row">
+            <div class="input-field col s12 m12 l4 offset-l4">
+                <input id="password" type="text">
+                <label for="password" class="active">Password:</label>
+                <a class="btn">Send</a>
+            </div>
+        </div>
+    </div>
+</div>
