--- a/public/app/setting/peripheral_settings.html
+++ b/public/app/setting/peripheral_settings.html
@@ -1,1 +1,106 @@
-peripheral setting
+
+<div class="container center">
+    <b class="headerrow">Peripheral Settings</b>
+    <div class="row">
+        <div class="col s12 m12 l6">
+            <div class="switch alarmswitch">
+                Emergency alarm:
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div class="switch alarmswitch">
+                Air-conditioning test:
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div class="switch alarmswitch">
+                Power failure alarm:
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div class="switch alarmswitch">
+                Low power detection:
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div class="switch alarmswitch">
+                Undervoltage alarm:
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div class="switch alarmswitch">
+                Door status detection:
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div class="switch alarmswitch">
+                Overvoltage alarm:
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div class="switch alarmswitch">
+                ACC detection:
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div class="switch alarmswitch">
+                Oil change alarm:
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+
+    </div>
+</div>
