--- a/public/app/setting/speed_threshold.html
+++ b/public/app/setting/speed_threshold.html
@@ -1,1 +1,19 @@
-dddddspeed threshold
+<div class="container center">
+    <b class="headerrow">Speed Threshold</b>
+    <div class="row">
+        <div class="col s12 m12 l6 offset-l3">
+            <div class="col s12 m12 l5">Speed threshold (0-255)</div>
+            <div class="col s12 m12 l3"><input id="speed" type="number" min="0" maxlength="3">
+                <label for="speed" class="active"></label>
+            </div>
+            <div class="col s12 m12 l1">km/h</div>
+        </div>
+        <div class="input-field col s12 m12 l4 offset-l4">
+            <input id="password" type="text">
+            <label for="password" class="active">Password:</label>
+            <a class="btn">Send</a>
+        </div>
+    </div>
+    <i class="fa fa-exclamation-triangle"></i><p>Operation Tips:<br/>
+    When the speed exceeds a set speed threshold when the machine take the initiative, made a speeding car alarm information. If set to 0 to not create excessive speed alarm.</p>
+</div>
