--- a/public/app/setting/timezone.html
+++ b/public/app/setting/timezone.html
@@ -1,1 +1,25 @@
-timezone
+<div class="container center">
+    <b class="headerrow">Timezone</b>
+    <div class="row">
+        <div class="col s12 m12 l12">
+            <p>please set difference value based on GMT:</p>
+            <div class="col s12 m12 l12">
+                <div class="col s12 m12 l3">Different Value:</div>
+                <div class="col s12 m12 l1">
+                    <input id="hour" type="number" maxlength="2">
+                    <label for="hour" class="active"></label>
+                </div>
+                <div class="col s12 m12 l1">Hour</div>
+                <div class="col s12 m12 l1">
+                    <input id="minute" type="number" maxlength="2">
+                    <label for="minute" class="active"></label>
+                </div>
+                <div class="col s12 m12 l1">Minute</div>
+            </div>
+
+            <div class="col s12 m12 l12">
+                
+            </div>
+        </div>
+    </div>
+</div>
