--- a/public/app/setting/interval.html
+++ b/public/app/setting/interval.html
@@ -1,1 +1,22 @@
-interval
+<div class="container center">
+    <b class="headerrow">Interval Setting</b>
+    <div class="row">
+        <div class="input-field col s12 m12 l6">
+            <div class="col s12 m12 l3">Acc on mode (1-65535):</div>
+            <div class="col s12 m12 l3"><input id="accon" value="30" type="number" min="0" maxlength="5">
+            <label for="accon" class="active" ></label></div>
+            <div class="col s12 m12 l1">Second</div>
+        </div>
+        <div class="input-field col s12 m12 l6">
+            <div class="col s12 m12 l3">Acc off mode (1-65535):</div>
+            <div class="col s12 m12 l3"><input id="accoff" value="60" type="number" min="0" maxlength="5">
+                <label for="accoff" class="active"></label></div>
+            <div class="col s12 m12 l1">Second</div>
+        </div>
+        <div class="input-field col s12 m12 l4 offset-l4">
+            <input id="password" type="text">
+            <label for="password" class="active">Password:</label>
+            <a class="btn">Send</a>
+        </div>
+    </div>
+</div>
