Fixed Dashboard and Admin require CSS and routing

--- a/public/app/report/home.html
+++ b/public/app/report/home.html
@@ -1,5 +1,5 @@
-<div class="admin">
-    <ul id="slide-out" class="side-nav fixed admin_side_nav">
+<div class="controls">
+    <ul id="slide-out" class="side-nav fixed controls_side_nav">
         <li><a ui-sref=".history_playback">History Playback</a></li>
         <li><a ui-sref=".gprs_flow">Check GPRS Flow</a></li>
         <li><a ui-sref=".operation_log">Check Operation Log</a></li>
