--- a/public/app/setting/home.html
+++ b/public/app/setting/home.html
@@ -1,5 +1,5 @@
-<div class="admin">
-    <ul id="slide-out" class="side-nav fixed admin_side_nav">
+<div class="controls">
+    <ul id="slide-out" class="side-nav fixed controls_side_nav">
         <li><a ui-sref=".message_to_device">Message to Device</a></li>
         <li><a ui-sref=".peripheral_settings">Peripheral</a></li>
         <li><a ui-sref=".interval">Interval</a></li>
