--- a/public/app/setting/peripheral_settings.html
+++ b/public/app/setting/peripheral_settings.html
@@ -1,104 +1,104 @@
 
-<div class="container center">
-    <b class="headerrow">Peripheral Settings</b>
+<div class="container">
+    <p class="headerrow">Peripheral Settings</p>
     <div class="row">
-        <div class="col s12 m12 l6">
+        <div class="col s12 m12 l5 push-l1">
             <div class="switch alarmswitch">
-                Emergency alarm:
                 <label>
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
                     On
                 </label>
+                &nbsp;&nbsp;Emergency alarm
             </div>
         </div>
-        <div class="col s12 m12 l6">
+        <div class="col s12 m12 l5 push-l1">
             <div class="switch alarmswitch">
-                Air-conditioning test:
                 <label>
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
                     On
                 </label>
+                &nbsp;&nbsp;Air-conditioning test
             </div>
         </div>
-        <div class="col s12 m12 l6">
+        <div class="col s12 m12 l5 push-l1">
             <div class="switch alarmswitch">
-                Power failure alarm:
                 <label>
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
                     On
                 </label>
+                &nbsp;&nbsp;Power failure alarm
             </div>
         </div>
-        <div class="col s12 m12 l6">
+        <div class="col s12 m12 l5 push-l1">
             <div class="switch alarmswitch">
-                Low power detection:
                 <label>
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
                     On
                 </label>
+                &nbsp;&nbsp;Low power detection
             </div>
         </div>
-        <div class="col s12 m12 l6">
+        <div class="col s12 m12 l5 push-l1">
             <div class="switch alarmswitch">
-                Undervoltage alarm:
                 <label>
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
                     On
                 </label>
+                &nbsp;&nbsp;Undervoltage alarm
             </div>
         </div>
-        <div class="col s12 m12 l6">
+        <div class="col s12 m12 l5 push-l1">
             <div class="switch alarmswitch">
-                Door status detection:
                 <label>
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
                     On
                 </label>
+                &nbsp;&nbsp;Door status detection
             </div>
         </div>
-        <div class="col s12 m12 l6">
+        <div class="col s12 m12 l5 push-l1">
             <div class="switch alarmswitch">
-                Overvoltage alarm:
                 <label>
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
                     On
                 </label>
+                &nbsp;&nbsp;Overvoltage alarm
             </div>
         </div>
-        <div class="col s12 m12 l6">
+        <div class="col s12 m12 l5 push-l1">
             <div class="switch alarmswitch">
-                ACC detection:
                 <label>
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
                     On
                 </label>
+                &nbsp;&nbsp;ACC detection
             </div>
         </div>
-        <div class="col s12 m12 l6">
+        <div class="col s12 m12 l5 push-l1">
             <div class="switch alarmswitch">
-                Oil change alarm:
                 <label>
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
                     On
                 </label>
+                &nbsp;&nbsp;Oil change alarm
             </div>
         </div>
 
