SMS and other UI

--- a/public/app/setting/parking.html
+++ b/public/app/setting/parking.html
@@ -1,1 +1,19 @@
-parking
+<div class="container center">
+    <b class="headerrow">Parking Alarm</b>
+    <div class="row">
+        <div class="col s12 m12 l6 offset-l3">
+            <div class="col s12 m12 l4">
+                <p>Time Threshold:<br/>(0-65535)</p>
+            </div>
+            <div class="col s12 m12 l6">
+                <input id="parking" type="number" min="0" maxlength="5">
+                <label for="parking" class="active">Minute</label>
+            </div>
+        </div>
+        <div class="input-field col s12 m12 l4 offset-l4">
+            <input id="password" type="text">
+            <label for="password" class="active">Password:</label>
+            <a class="btn">Send</a>
+        </div>
+    </div>
+</div>
