--- a/public/app/setting/sms_altering.html
+++ b/public/app/setting/sms_altering.html
@@ -1,1 +1,77 @@
-sms altering
+
+<div class="container center">
+    <b class="headerrow">SMS Altering Setting</b>
+    <div class="row">
+        <div class="col s12 m12 l6">
+            <div class="switch alarmswitch">
+                Power Off Alarm:
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div class="switch alarmswitch">
+                Emergency Test:
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div class="switch alarmswitch">
+                Speed Alarm:
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div class="switch alarmswitch">
+                Temperature Alarm:
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div class="switch alarmswitch">
+                Oil Changing Alarm:
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div class="switch alarmswitch">
+                ACC ON:
+                <label>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+        <div class="input-field col s12 m12 l4 offset-l4 password">
+            <input id="password" type="text">
+            <label for="password" class="active">Password:</label>
+            <a class="btn">Send</a>
+        </div>
+    </div>
+</div>
