--- a/public/app/setting/sms_service_number.html
+++ b/public/app/setting/sms_service_number.html
@@ -1,1 +1,24 @@
-SMS service number
+<div class="container center">
+    <b class="headerrow">SMS Service Number</b>
+    <div class="row">
+        <div class="col s12 m12 l12">
+            <div class="col s12 m12 l4 offset-l4">
+                <label for="telephone1" class="active">Telephone 1:</label>
+                <input id="telephone1" type="number" maxlength="2">
+            </div>
+            <div class="col s12 m12 l4 offset-l4">
+                <label for="telephone2" class="active">Telephone 2:</label>
+                <input id="telephone2" type="number" maxlength="2">
+            </div>
+            <div class="col s12 m12 l4 offset-l4">
+                <label for="telephone3" class="active">Telephone 3:</label>
+                <input id="telephone3" type="number" maxlength="2">
+            </div>
+        </div>
+        <div class="input-field col s12 m12 l4 offset-l4 password">
+            <input id="password" type="text">
+            <label for="password" class="active">Password:</label>
+            <a class="btn">Send</a>
+        </div>
+    </div>
+</div>
