--- a/public/app/setting/fatugue_driving_time.html
+++ b/public/app/setting/fatugue_driving_time.html
@@ -1,1 +1,22 @@
-fatigue driving
+<div class="container center">
+    <b class="headerrow">Fatigue Driving Time</b>
+    <div class="row">
+        <div class="col s12 m12 l12">
+            <div class="col s12 m12 l3 offset-l3">
+                <label for="minimum" class="active">Threshold: (Minute)</label>
+                <input id="minimum" type="number" maxlength="2">
+            </div>
+            <div class="col s12 m12 l3 ">
+                <label for="maximum" class="active">Buffer Time: (Minute)</label>
+                <input id="maximum" type="number" maxlength="2">
+            </div>
+        </div>
+        <div class="input-field col s12 m12 l4 offset-l4 password">
+            <input id="password" type="text">
+            <label for="password" class="active">Password:</label>
+            <a class="btn">Send</a>
+        </div>
+    </div>
+    <i class="fa fa-exclamation-triangle"></i><p>Operation Tips:<br/>
+    When the ACC is ON longer than the time set threshold, the vehicle driving machines take the initiative, made a fatigue alarm information. If set to 0 to not fatigue driving alarm.
+</div>
