--- a/public/app/setting/idle.html
+++ b/public/app/setting/idle.html
@@ -1,1 +1,21 @@
-idle
+<div class="container center">
+    <b class="headerrow">Idling Alarm</b>
+    <div class="row">
+        <div class="col s12 m12 l6 offset-l3">
+            <div class="col s12 m12 l4">
+                <p>Time Threshold:<br/>(0-65535)</p>
+            </div>
+            <div class="col s12 m12 l6">
+                <input id="idle" type="number" min="0" maxlength="5">
+                <label for="idle" class="active">Minute</label>
+            </div>
+        </div>
+        <div class="input-field col s12 m12 l4 offset-l4">
+            <input id="password" type="text">
+            <label for="password" class="active">Password:</label>
+            <a class="btn">Send</a>
+        </div>
+    </div>
+    <i class="fa fa-exclamation-triangle"></i><p>Operation Tips:<br/>
+    When the parking time exceeds the time threshold set when the machine take the initiative, made a parking car alarm information. If set to 0 to not create parking alarm
+</div>
