--- a/public/app/setting/temperature.html
+++ b/public/app/setting/temperature.html
@@ -1,1 +1,20 @@
-temperature
+<div class="container center">
+    <b class="headerrow">Temperature</b>
+    <div class="row">
+        <div class="col s12 m12 l12">
+            <div class="col s12 m12 l3 offset-l3">
+                <label for="minimum" class="active">Minumum ( ℃ )</label>
+                <input id="minimum" type="number" maxlength="2">
+            </div>
+            <div class="col s12 m12 l3 ">
+                <label for="maximum" class="active">Maximum ( ℃ )</label>
+                <input id="maximum" type="number" maxlength="2">
+            </div>
+        </div>
+        <div class="input-field col s12 m12 l4 offset-l4 password">
+            <input id="password" type="text">
+            <label for="password" class="active">Password:</label>
+            <a class="btn">Send</a>
+        </div>
+    </div>
+</div>
