--- a/public/app/setting/timezone.html
+++ b/public/app/setting/timezone.html
@@ -1,25 +1,36 @@
 <div class="container center">
     <b class="headerrow">Timezone</b>
     <div class="row">
+        <p>please set difference value based on GMT:</p>
         <div class="col s12 m12 l12">
-            <p>please set difference value based on GMT:</p>
-            <div class="col s12 m12 l12">
-                <div class="col s12 m12 l3">Different Value:</div>
-                <div class="col s12 m12 l1">
-                    <input id="hour" type="number" maxlength="2">
-                    <label for="hour" class="active"></label>
-                </div>
-                <div class="col s12 m12 l1">Hour</div>
-                <div class="col s12 m12 l1">
-                    <input id="minute" type="number" maxlength="2">
-                    <label for="minute" class="active"></label>
-                </div>
-                <div class="col s12 m12 l1">Minute</div>
+            <div class="col s12 m12 l6">
+                <label for="hour" class="active">Hour</label>
+                <input id="hour" type="number" maxlength="2">
             </div>
+            <div class="col s12 m12 l6">
+                <label for="minute" class="active">Minute</label>
+                <input id="minute" type="number" maxlength="2">
+            </div>
+        </div>
+        <div class="col s12 m12 l12">
+            <form action="#">
+                <div class="col s12 m12 l12">
+                    <p class="col s12 m12 l3 push-l3">
+                        <input type="radio" id="east" />
+                        <label for="east">Meridian East(+)</label>
+                    </p>
+                    <p class="col s12 m12 l3 offset-l2">
+                        <input type="radio" id="west" />
+                        <label for="west">Meridian West(-)</label>
+                    </p>
+                </div>
+            </form>
+        </div>
 
-            <div class="col s12 m12 l12">
-                
-            </div>
+        <div class="input-field col s12 m12 l4 offset-l4">
+            <input id="password" type="text">
+            <label for="password" class="active">Password:</label>
+            <a class="btn">Send</a>
         </div>
     </div>
 </div>
