--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
         <div ui-view></div>
 
         <script src="libs/angular/angular.min.js"></script>
+        <script src="libs/angular-resource/angular-resource.min.js"></script>
         <script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script src="libs/jquery/dist/jquery.min.js"></script>
         <script src="libs/materialize/dist/js/materialize.min.js"></script>
@@ -37,6 +38,8 @@
         <script src="app/home/home.js"></script>
         <script src="app/setting/home.js"></script>
         <script src="app/report/home.js"></script>
+        <script src="app/admin/users.js"></script>
+        <script src="app/shared/user.js"></script>
         <script src="assets/js/script.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?v=3&libraries=geometry"></script>
     </body>
