Fix user authentication bug

--- a/public/app/admin/users.html
+++ b/public/app/admin/users.html
@@ -30,6 +30,7 @@
                                 <th>{{user.username}}</th>
                                 <td>{{user.email}}</td>
                                 <td>{{user.role}}</td>
+                                <td>{{user.status}}</td>
                                 <td>
                                     <a class="btn z-depth-0 blue lighten-1" ng-click="vm.product_view(product,product_detail)">
                                         <i class="fa fa-edit"></i>
