--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -16,7 +16,7 @@
             </div>
         </div>
     </div>
-
+<!--
     <div class="col s12 m12 l6">
         <div class="portlet-title">
             <div class="caption caption-md">
@@ -36,4 +36,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
