Admin Location marker

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
         <script src="app/setting/home.js"></script>
         <script src="app/report/home.js"></script>
         <script src="app/admin/users.js"></script>
+        <script src="app/admin/location.js"></script>
         <script src="app/shared/user.js"></script>
         <script src="app/shared/authentication.js"></script>
         <script src="assets/js/script.js"></script>
