--- a/public/app/admin/home.html
+++ b/public/app/admin/home.html
@@ -1,6 +1,7 @@
 <div class="admin">
     <ul id="slide-out" class="side-nav fixed admin_side_nav">
         <li><a ui-sref=".users">Users</a></li>
+        <li><a ui-sref=".location">Location</a></li>
     </ul>
     <div ui-view></div>
 </div>
