--- a/public/app/setting/bay_information.html
+++ b/public/app/setting/bay_information.html
@@ -1,1 +1,148 @@
-bay_information
+
+<p class="headerrow center">Bay Information Setting</p>
+<div class="row left">
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l3">Set user Information:</p>
+        <div class="input-field col s12 m12 l9">
+            <input id="childname" type="text">
+            <label for="childname" class="active">Child Name:</label>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l3">Set SMS Service Number:</p>
+        <div class="col s12 m12 l9">
+            <div class="col s12 m12 l4 input-field">
+                <input id="phone1" type="text">
+                <label for="phone1" class="active">Phone 1:</label>
+            </div>
+            <div class="col s12 m12 l4 input-field">
+                <input id="phone2" type="text">
+                <label for="phone2" class="active">Phone 2:</label>
+            </div>
+            <div class="col s12 m12 l4 input-field">
+                <input id="phone3" type="text">
+                <label for="phone3" class="active">Phone 3:</label>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l3">Setting Server:</p>
+        <div class="col s12 m12 l9">
+            <div class="col s12 m12 l4 input-field">
+                <input id="serverip" type="text">
+                <label for="serverip" class="active">Server IP:</label>
+            </div>
+            <div class="col s12 m12 l4 input-field">
+                <input id="port" type="text">
+                <label for="port" class="active">Port:</label>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l3">Low Bettery Switch:</p>
+        <div class="col s12 m12 l2 switch alarmswitch">
+            <label>
+                Off
+                <input type="checkbox">
+                <span class="lever"></span>
+                On
+            </label>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l3">Set Speed Threshold:</p>
+        <div class="col s12 m12 l9">
+            <div class="input-field col s12 m12 l4">
+                <input id="speed" type="text">
+                <label for="speed" class="active">Speed Threshold:</label>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l3">Set Interval:</p>
+        <div class="col s12 m12 l9">
+            <div class="input-field col s12 m12 l4">
+                <input id="interval" type="text">
+                <label for="interval" class="active">Interval:</label>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l3">Time Zone Setting:</p>
+        <div class="col s12 m12 l9">
+            <div class="input-field col s12 m12 l4">
+                <input id="timezone" type="text">
+                <label for="timezone" class="active">Time Zone:</label>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l3">Set Language:</p>
+        <div class="col s12 m12 l9">
+            <div class="input-field col s12 m12 l4">
+                <input id="language" type="text">
+                <label for="language" class="active">Language:</label>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l3">Time Zone Setting:</p>
+        <div class="col s12 m12 l9">
+            <div class="input-field col s12 m12 l4">
+                <input id="timezone" type="text">
+                <label for="timezone" class="active">Time Zone:</label>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l3">Set Geo-Fence:</p>
+        <div class="col s12 m12 l9">
+            <div class="input-field col s12 m12 l4">
+                <input id="fencename" type="text">
+                <label for="fencename" class="active">Fence Name:</label>
+            </div>
+            <div class="input-field col s12 m12 l4">
+                <input id="coordinate" type="text">
+                <label for="coordinate" class="active">Coordinate:</label>
+            </div>
+            <div class="input-field col s12 m12 l2">
+                <input id="radius" type="text">
+                <label for="radius" class="active">Radius(M):</label>
+            </div>
+            <div class="col s12 m12 l2 switch alarmswitch">
+                <label>
+                    Status:<br/>
+                    Off
+                    <input type="checkbox">
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <p class="col s12 m12 l3">Update Password:</p>
+        <div class="col s12 m12 l9">
+            <div class="input-field col s12 m12 l4">
+                <input id="password" type="text">
+                <label for="password" class="active">New Password:</label>
+            </div>
+        </div>
+    </div>
+
+    <div class="input-field col s12 m12 l4 offset-l4 center">
+        <input id="password" type="text">
+        <label for="password" class="active">Password:</label>
+        <a class="btn">Send</a>
+    </div>
+</div>
