--- a/public/app/report/gprs_flow.html
+++ b/public/app/report/gprs_flow.html
@@ -1,1 +1,76 @@
-gprs flow
+<p class="headerrow">GPRS Flow</p>
+<div class="row">
+    <div class="col s12 m12 l12" style="border:1px black solid">
+        <div class="col s12 m12 l3">
+            Period:<input type="month" >.
+        </div>
+
+        <div class="col s12 m12 l3">
+            Fleet:<form class="col s12 m12 l12">
+            <select>All Vehicle
+                <optgroup label="BH PORT KLANG">
+                    <option value="blv503">BLV 503</option>
+                </optgroup>
+                <optgroup label="SHSJB">
+                    <option value="agx4139">AGX 4139</option>
+                </optgroup>
+                <optgroup label="SHSKL">
+                    <option value="bey3416">BEY 3416</option>
+                </optgroup>
+            </select>
+        </form>,
+        </div>
+
+        <div class="col s12 m12 l3">
+            Plate NO:<form class="col s12 m12 l12">
+            <select>All Vehicle
+                <optgroup label="BH PORT KLANG">
+                    <option value="blv503">BLV 503</option>
+                </optgroup>
+                <optgroup label="SHSJB">
+                    <option value="agx4139">AGX 4139</option>
+                </optgroup>
+                <optgroup label="SHSKL">
+                    <option value="bey3416">BEY 3416</option>
+                </optgroup>
+            </select>
+        </form>
+        </div>
+        <a class="btn">Search</a>
+    </div>
+
+    <div class="col s12 m12 l12" style="border:1px black solid;border-top:none">
+        <table>
+            <thead>
+            <tr>
+                <td>Plate NO</td>
+                <td>SIM Card</td>
+                <td>Month</td>
+                <td>Upstream flow(byte)</td>
+                <td>Downstream flow(byte)</td>
+                <td>Totalstream flow(byte)</td>
+            </tr>
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
+    </div>
+
+    <div class="col s12 m12 l12">
+        <table>
+            <td style="text-align: right; vertical-align: middle;" id="tdPage">
+                <a id="Pager1_btnFirst" class="aspNetDisabled btnPage">Home</a>
+                <a id="Pager1_btnPrevious" class="aspNetDisabled btnPage">Previous</a>
+                <a style="margin-right: 10px; margin-left: 5px;">
+                    <span id="Pager1_lblCurrentPage">1</span>/0</a>
+                <a id="Pager1_btnNext" class="aspNetDisabled btnPage">Next</a>
+                <a id="Pager1_btnLast" class="aspNetDisabled btnPage">Last</a><span style="margin-left: 15px; margin-right: 15px;"> Total page:
+                            <span id="Pager1_lblPageCount">0</span>
+                            ，<span id="Pager1_lblItemCount">0</span> items，</span>Redirect to<input name="Pager1$tbPageIndex" type="text" id="Pager1_tbPageIndex" style="width:25px;">
+                <input type="submit" name="Pager1$btnRedirect" value="GO" onclick="return CheckPageIndex();" id="Pager1_btnRedirect">
+                &nbsp;&nbsp;
+            </td>
+        </table>
+    </div>
+</div>
